--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
   font-family: sans-serif;
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  background: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
 }
 
 h1 {
   text-align: center;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 48px;
+  font-family: Times, serif;
+  font-size: 50px;
 }
 
 h2 {
@@ -20,6 +20,8 @@ select {
   padding: 10px;
   border-radius: 3px;
   font-size: 18px;
+  background-color: #fdefe9dc;
+  border-color: rgba(252, 196, 150, 0.8);
 }
 
 .container {
@@ -27,7 +29,7 @@ select {
   margin: 60px auto;
   background: white;
   padding: 30px;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
@@ -37,7 +39,7 @@ select {
   margin: 10px 0;
   justify-content: space-between;
   padding: 30px 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(252, 196, 150, 0.5);
 }
 
 .city:last-child {
